@@ -1,3 +1,6 @@
+2009-01-11 Add add_click and pop_click methods in 
+           BlockingContourLabeler. -JJL
+
 2010-01-03 Added rcParams['axes.color_cycle'] - EF
 
 2010-01-03 Added Pierre's qt4 formlayout editor and toolbar button - JDH
